# agent

./: .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  story-算法组开发流程工程化落地.md  test_connectivity.py
.github/actions/claude-agent-review/: action.yml  run_agent.py  synthesize.py
.github/actions/claude-review/: action.yml  review.py
.github/actions/qwen-review/: review.py
.github/workflows/: ci-pr-agent-review.yml  ci-pr-check.yml  ci-pr-pipeline.yml  ci-pr-review-qwen.yml  ci-pr-review.yml  docs-collect-changelogs.yml  release-centralized.yml
agent-deploy/: CHANGELOG.md
agent-deploy/.github/actions/qwen-review/: action.yml
agent-deploy/.github/workflows/: ci-pr-check.yml  ci-pr-pipeline.yml  release-auto.yml
docs/: release-automation.md  story1.md
github-side/: QUICKSTART.md  SETUP.md
github-side/workflows/: ci-pr-pipeline.yml  release-auto.yml
mcp-server/: Dockerfile  README.md  cli.py  config.py  pyproject.toml  server.py
mcp-server/tools/: changelog.py  feishu.py  fetch.py  github_actions.py  jira.py  review.py  validate.py  versions.py
scripts/tests/: test_parse_repos.py
server-side/: .env.example  Dockerfile  SETUP.md  docker-compose.yml
