[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wuji-release-mcp"
version = "0.1.0"
description = "MCP Server for wuji-technology release automation"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
wuji-release-mcp = "server:main"   # MCP server（stdio 或 HTTP）
wuji-release = "cli:main"          # 纯命令行，不依赖 Claude